@@ -22,6 +22,10 @@
       = render 'shared/visibility_level', f: f, visibility_level: @group.visibility_level, can_change_visibility_level: can_change_group_visibility_level?(@group), form_model: @group
 
       .form-group
+        .col-sm-offset-2.col-sm-10
+          = render 'shared/allow_request_access', form: f
+
+      .form-group
         %hr
         = f.label :share_with_group_lock, class: 'control-label' do
           Share with group lock
